Rounded prices to 3rd decimal place

--- a/portfolio_optimization/basic_portfolio_optimization.ipynb
+++ b/portfolio_optimization/basic_portfolio_optimization.ipynb
@@ -158,63 +158,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-01-02</th>\n",
-       "      <td>73.561539</td>\n",
-       "      <td>68.368500</td>\n",
-       "      <td>156.591980</td>\n",
-       "      <td>75.087502</td>\n",
-       "      <td>68.368500</td>\n",
-       "      <td>160.619995</td>\n",
-       "      <td>75.150002</td>\n",
-       "      <td>68.406998</td>\n",
-       "      <td>160.729996</td>\n",
-       "      <td>73.797501</td>\n",
-       "      <td>67.077499</td>\n",
-       "      <td>158.330002</td>\n",
-       "      <td>74.059998</td>\n",
-       "      <td>67.077499</td>\n",
-       "      <td>158.779999</td>\n",
+       "      <td>73.562</td>\n",
+       "      <td>68.368</td>\n",
+       "      <td>156.592</td>\n",
+       "      <td>75.088</td>\n",
+       "      <td>68.368</td>\n",
+       "      <td>160.62</td>\n",
+       "      <td>75.150</td>\n",
+       "      <td>68.407</td>\n",
+       "      <td>160.73</td>\n",
+       "      <td>73.798</td>\n",
+       "      <td>67.077</td>\n",
+       "      <td>158.33</td>\n",
+       "      <td>74.060</td>\n",
+       "      <td>67.077</td>\n",
+       "      <td>158.78</td>\n",
        "      <td>135480400</td>\n",
        "      <td>28132000</td>\n",
        "      <td>22622100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-01-03</th>\n",
-       "      <td>72.846382</td>\n",
-       "      <td>68.032997</td>\n",
-       "      <td>154.642151</td>\n",
-       "      <td>74.357498</td>\n",
-       "      <td>68.032997</td>\n",
-       "      <td>158.619995</td>\n",
-       "      <td>75.144997</td>\n",
-       "      <td>68.625000</td>\n",
-       "      <td>159.949997</td>\n",
-       "      <td>74.125000</td>\n",
-       "      <td>67.277199</td>\n",
-       "      <td>158.059998</td>\n",
-       "      <td>74.287498</td>\n",
-       "      <td>67.392998</td>\n",
-       "      <td>158.320007</td>\n",
+       "      <td>72.846</td>\n",
+       "      <td>68.033</td>\n",
+       "      <td>154.642</td>\n",
+       "      <td>74.357</td>\n",
+       "      <td>68.033</td>\n",
+       "      <td>158.62</td>\n",
+       "      <td>75.145</td>\n",
+       "      <td>68.625</td>\n",
+       "      <td>159.95</td>\n",
+       "      <td>74.125</td>\n",
+       "      <td>67.277</td>\n",
+       "      <td>158.06</td>\n",
+       "      <td>74.287</td>\n",
+       "      <td>67.393</td>\n",
+       "      <td>158.32</td>\n",
        "      <td>146322800</td>\n",
        "      <td>23728000</td>\n",
        "      <td>21116200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-01-06</th>\n",
-       "      <td>73.426834</td>\n",
-       "      <td>69.710503</td>\n",
-       "      <td>155.041855</td>\n",
-       "      <td>74.949997</td>\n",
-       "      <td>69.710503</td>\n",
-       "      <td>159.029999</td>\n",
-       "      <td>74.989998</td>\n",
-       "      <td>69.824997</td>\n",
-       "      <td>159.100006</td>\n",
-       "      <td>73.187500</td>\n",
-       "      <td>67.500000</td>\n",
-       "      <td>156.509995</td>\n",
-       "      <td>73.447502</td>\n",
-       "      <td>67.500000</td>\n",
-       "      <td>157.080002</td>\n",
+       "      <td>73.427</td>\n",
+       "      <td>69.711</td>\n",
+       "      <td>155.042</td>\n",
+       "      <td>74.950</td>\n",
+       "      <td>69.711</td>\n",
+       "      <td>159.03</td>\n",
+       "      <td>74.990</td>\n",
+       "      <td>69.825</td>\n",
+       "      <td>159.10</td>\n",
+       "      <td>73.188</td>\n",
+       "      <td>67.500</td>\n",
+       "      <td>156.51</td>\n",
+       "      <td>73.448</td>\n",
+       "      <td>67.500</td>\n",
+       "      <td>157.08</td>\n",
        "      <td>118387200</td>\n",
        "      <td>34646000</td>\n",
        "      <td>20813700</td>\n",
@@ -224,33 +224,26 @@
        "</div>"
       ],
       "text/plain": [
-       "            Adj Close                             Close             \\\n",
-       "                 AAPL       GOOG        MSFT       AAPL       GOOG   \n",
-       "Date                                                                 \n",
-       "2020-01-02  73.561539  68.368500  156.591980  75.087502  68.368500   \n",
-       "2020-01-03  72.846382  68.032997  154.642151  74.357498  68.032997   \n",
-       "2020-01-06  73.426834  69.710503  155.041855  74.949997  69.710503   \n",
+       "           Adj Close                    Close                    High          \\\n",
+       "                AAPL    GOOG     MSFT    AAPL    GOOG    MSFT    AAPL    GOOG   \n",
+       "Date                                                                            \n",
+       "2020-01-02    73.562  68.368  156.592  75.088  68.368  160.62  75.150  68.407   \n",
+       "2020-01-03    72.846  68.033  154.642  74.357  68.033  158.62  75.145  68.625   \n",
+       "2020-01-06    73.427  69.711  155.042  74.950  69.711  159.03  74.990  69.825   \n",
        "\n",
-       "                             High                               Low  \\\n",
-       "                  MSFT       AAPL       GOOG        MSFT       AAPL   \n",
-       "Date                                                                  \n",
-       "2020-01-02  160.619995  75.150002  68.406998  160.729996  73.797501   \n",
-       "2020-01-03  158.619995  75.144997  68.625000  159.949997  74.125000   \n",
-       "2020-01-06  159.029999  74.989998  69.824997  159.100006  73.187500   \n",
+       "                       Low                    Open                     Volume  \\\n",
+       "              MSFT    AAPL    GOOG    MSFT    AAPL    GOOG    MSFT       AAPL   \n",
+       "Date                                                                            \n",
+       "2020-01-02  160.73  73.798  67.077  158.33  74.060  67.077  158.78  135480400   \n",
+       "2020-01-03  159.95  74.125  67.277  158.06  74.287  67.393  158.32  146322800   \n",
+       "2020-01-06  159.10  73.188  67.500  156.51  73.448  67.500  157.08  118387200   \n",
        "\n",
-       "                                        Open                         \\\n",
-       "                 GOOG        MSFT       AAPL       GOOG        MSFT   \n",
-       "Date                                                                  \n",
-       "2020-01-02  67.077499  158.330002  74.059998  67.077499  158.779999   \n",
-       "2020-01-03  67.277199  158.059998  74.287498  67.392998  158.320007   \n",
-       "2020-01-06  67.500000  156.509995  73.447502  67.500000  157.080002   \n",
-       "\n",
-       "               Volume                      \n",
-       "                 AAPL      GOOG      MSFT  \n",
-       "Date                                       \n",
-       "2020-01-02  135480400  28132000  22622100  \n",
-       "2020-01-03  146322800  23728000  21116200  \n",
-       "2020-01-06  118387200  34646000  20813700  "
+       "                                \n",
+       "                GOOG      MSFT  \n",
+       "Date                            \n",
+       "2020-01-02  28132000  22622100  \n",
+       "2020-01-03  23728000  21116200  \n",
+       "2020-01-06  34646000  20813700  "
       ]
      },
      "execution_count": 2,
@@ -266,7 +259,7 @@
     "# Step 2: download prices from Yahoo!\n",
     "all_prices = yf.download(stocks, start=start_date)\n",
     "\n",
-    "all_prices.head(3)"
+    "all_prices.round(3).head(3)"
    ]
   },
   {
@@ -316,32 +309,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-01-02</th>\n",
-       "      <td>75.087502</td>\n",
-       "      <td>68.368500</td>\n",
-       "      <td>160.619995</td>\n",
+       "      <td>75.088</td>\n",
+       "      <td>68.368</td>\n",
+       "      <td>160.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-01-03</th>\n",
-       "      <td>74.357498</td>\n",
-       "      <td>68.032997</td>\n",
-       "      <td>158.619995</td>\n",
+       "      <td>74.357</td>\n",
+       "      <td>68.033</td>\n",
+       "      <td>158.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-01-06</th>\n",
-       "      <td>74.949997</td>\n",
-       "      <td>69.710503</td>\n",
-       "      <td>159.029999</td>\n",
+       "      <td>74.950</td>\n",
+       "      <td>69.711</td>\n",
+       "      <td>159.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 AAPL       GOOG        MSFT\n",
-       "Date                                        \n",
-       "2020-01-02  75.087502  68.368500  160.619995\n",
-       "2020-01-03  74.357498  68.032997  158.619995\n",
-       "2020-01-06  74.949997  69.710503  159.029999"
+       "              AAPL    GOOG    MSFT\n",
+       "Date                              \n",
+       "2020-01-02  75.088  68.368  160.62\n",
+       "2020-01-03  74.357  68.033  158.62\n",
+       "2020-01-06  74.950  69.711  159.03"
       ]
      },
      "execution_count": 3,
@@ -351,7 +344,7 @@
    ],
    "source": [
     "close_prices = all_prices['Close']\n",
-    "close_prices.head(3)"
+    "close_prices.round(3).head(3)"
    ]
   },
   {
@@ -435,32 +428,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-01-03</th>\n",
-       "      <td>-0.009722</td>\n",
-       "      <td>-0.004907</td>\n",
-       "      <td>-0.012452</td>\n",
+       "      <td>-0.010</td>\n",
+       "      <td>-0.005</td>\n",
+       "      <td>-0.012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-01-06</th>\n",
-       "      <td>0.007968</td>\n",
-       "      <td>0.024657</td>\n",
-       "      <td>0.002585</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-01-07</th>\n",
-       "      <td>-0.004703</td>\n",
-       "      <td>-0.000624</td>\n",
-       "      <td>-0.009118</td>\n",
+       "      <td>-0.005</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>-0.009</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                AAPL      GOOG      MSFT\n",
-       "Date                                    \n",
-       "2020-01-03 -0.009722 -0.004907 -0.012452\n",
-       "2020-01-06  0.007968  0.024657  0.002585\n",
-       "2020-01-07 -0.004703 -0.000624 -0.009118"
+       "             AAPL   GOOG   MSFT\n",
+       "Date                           \n",
+       "2020-01-03 -0.010 -0.005 -0.012\n",
+       "2020-01-06  0.008  0.025  0.003\n",
+       "2020-01-07 -0.005 -0.001 -0.009"
       ]
      },
      "execution_count": 4,
@@ -470,7 +463,7 @@
    ],
    "source": [
     "returns = close_prices.pct_change().dropna()\n",
-    "returns.head(3)"
+    "returns.round(3).head(3)"
    ]
   },
   {
