Fixed typos and writing errors

--- a/graph_nns_series/pyg_pyl_perfect_match/pytorch-geometric-lightning-perfect-match.ipynb
+++ b/graph_nns_series/pyg_pyl_perfect_match/pytorch-geometric-lightning-perfect-match.ipynb
@@ -472,7 +472,7 @@
     "tags": []
    },
    "source": [
-    "Now let's split our data"
+    "Now split our data"
    ]
   },
   {
@@ -555,9 +555,7 @@
     "1. Edge label - that describes if the edge is true/fake. **This is what we want to predict**.  \n",
     "2. Edge label index - 2 x NUM EDGES matrix, that stores node connections.  \n",
     "   \n",
-    "Let's investigate the distribution of positive and negative samples.  We have some new attributes:\n",
-    "1. Edge label - that describes if the edge is true/fake. **This is what we want to predict**.\n",
-    "2. Edge label index - 2 x NUM EDGES matrix, that stores node connections."
+    "Let's investigate the distribution of positive and negative samples."
    ]
   },
   {
@@ -1890,8 +1888,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b3dcb397",
    "metadata": {
     "papermill": {
@@ -1903,7 +1900,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "source": [
+    "# Bibliography\n",
+    "\n",
+    "1. Hamilton, W., Ying, Z., & Leskovec, J. (2017). Inductive representation learning on large graphs. Advances in neural information processing systems, 30.\n",
+    "2. McCormick, C. (2017). Word2Vec Tutorial Part 2 - Negative Sampling. http://mccormickml.com/2017/01/11/word2vec-tutorial-part-2-negative-sampling/\n",
+    "3. Rossi, A., Tiezzi, M., Dimitri, G. M., Bianchini, M., Maggini, M., & Scarselli, F. (2018). Inductive–transductive learning with graph neural networks. In Artificial Neural Networks in Pattern Recognition: 8th IAPR TC3 Workshop, ANNPR 2018, Siena, Italy, September 19–21, 2018, Proceedings 8 (pp. 201–212). Springer International Publishing. https://link.springer.com/chapter/10.1007/978-3-319-99978-4_16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a0ce03",
+   "metadata": {},
    "source": []
   }
  ],
