Minor change to Llama code

--- a/graph_nns_series/llm_knowledge_extraction/03_llama_index_knowledge_base/llama_demo.ipynb
+++ b/graph_nns_series/llm_knowledge_extraction/03_llama_index_knowledge_base/llama_demo.ipynb
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Step three** - building index\n",
+    "## **Third step** - building index\n",
     "\n",
     "Now we will build Knowledge Graph Index. Under the hood LLM, after reading the text will respond with triplets (subject, predicate, object). We will use them to build the index."
    ]
