Added missing table of contents

--- a/nodepiece_from_node_ids_to_tokens/nodepiece_post.ipynb
+++ b/nodepiece_from_node_ids_to_tokens/nodepiece_post.ipynb
@@ -28,6 +28,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This post is pretty long, therefore here is a short overview of sections and sub-sections:\n",
+    "1. **Part 1: The Magic of Building Blocks**\n",
+    "    1. **The NLP World** - Short History: This section highlights the evolution of natural language processing, focusing on foundational algorithms like Word2Vec and GloVe.\n",
+    "    2. **The Advent of Transformer Tokenizers**: Discusses the significant impact of Transformer-based tokenization on the efficiency and flexibility of NLP models.\n",
+    "    3. **The World of Graphs**: Explores the potential of applying NLP tokenization concepts to graph neural networks, setting the stage for NodePiece.\n",
+    "2. **Part 2: The NodePiece Algorithm**\n",
+    "    1. **The Contribution and Sources**: Introduces the NodePiece model, emphasizing its novelty and the primary sources of inspiration from NLP.\n",
+    "    2. **Basic Concepts**: Describes the fundamental components of the NodePiece model, including its approach to tokenizing graph nodes.\n",
+    "    3. **Positional Features**: Explains how NodePiece utilizes the spatial position of nodes relative to selected anchor points.\n",
+    "    4. **Relational Features**: Details how NodePiece captures the types of relationships in which a node is involved.\n",
+    "    5. **The Unique Fingerprint - An Intuition**: Provides an intuitive explanation of how NodePiece combines positional and relational features to create unique node embeddings.\n",
+    "3. **Part 3: A Formal Definition**\n",
+    "    1. **Set-Based Form**: Formalizes the process of representing nodes through sets of anchors, distances, and relations.\n",
+    "    2. **Embedding of Anchors, Distances and Relations**: Describes how NodePiece transforms sets into vector representations for embedding.\n",
+    "    3. **Encoding**: Details the encoding process that compresses node information into a single vector per node.\n",
+    "    4. **What to Do With It?**: Discusses potential applications and benefits of the NodePiece embeddings in graph neural networks.\n",
+    "4. **Part 4: The Simplified Implementation**\n",
+    "    1. **An Overview**: Introduces a simplified version of NodePiece designed for educational purposes and easier understanding.\n",
+    "    2. **The Data**: Describes the dataset used for demonstration, emphasizing the selection of a manageable subset for practicality.\n",
+    "    3. **Tokenization**: Explains the implementation of the NodePiece tokenization process within the simplified model.\n",
+    "    4. **Anchor Selection**: Details the method used for selecting anchor nodes in the implementation.\n",
+    "    5. **Building Distance to K Nearest Anchors**: Describes how the model calculates distances from nodes to their nearest anchors.\n",
+    "    6. **Extraction of the Relational Context**: Explains the process of identifying and embedding the relational context of nodes.\n",
+    "    7. **Feature Matrices**: Highlights the outcome of tokenization and context extraction in the form of feature matrices.\n",
+    "    8. **Full Model Definition**: Provides a comprehensive look at the model architecture and components.\n",
+    "    9. **TransE Model Training**: Discusses the training of a TransE model using NodePiece embeddings for knowledge graph embedding tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Jupyter notebook disclaimer"
    ]
   },
